[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fastruments"
version = "0.1.0"
description = "FAST Group's instrument library"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"

authors = [
    { name = "Riccardo Albiero", email = "albr.riccardo@gmail.com" }
]

maintainers = [
    { name = "Riccardo Albiero", email = "albr.riccardo@gmail.com" }
]

license = { text = "GPL-3.0" }

dependencies = [
    "pyvisa"
    "qontrol",
    "matplotlib>=3.3.4",
    "nptyping>=2.4.1",
    "numpy>=1.24.4",
    "opencv-python>=4.8.0",
    "plotly>=6.1.0",
    "toml>=0.10.2",
    "tomli>=2.0.1",
]

[tool.setuptools]
package-dir = { "" = "src" }
zip-safe = true
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
femto = ["py.typed", "utils/*"]

[tool.flake8]
max-line-length = 120
ignore = ["E203", "W503"]

[tool.pep8]
max-line-length = 88
ignore = [
    "E101","E114","E115","E116","E121","E128",
    "E251","E265","E266","E3",
    "E711","E712","E713","E714","W191"
]
