[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fastruments"
version = "0.1.0"
description = "FAST Group's instrument library"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"

authors = [
    { name = "Riccardo Albiero", email = "albr.riccardo@gmail.com" }
]

maintainers = [
    { name = "Riccardo Albiero", email = "albr.riccardo@gmail.com" }
]

license = { text = "GPL-3.0" }

dependencies = [
    "pyvisa",
    "qontrol",
    "matplotlib",
    "numpy",
    "opencv-python"
]

[tool.setuptools]
packages = ["fastruments"]
include-package-data = true
zip-safe = true

[tool.setuptools.package-data]
fastruments = ["dll/*.dll"]
