[metadata]
name = fastruments
version = 0.0.1
description = A Python library for controlling laboratory instruments.
long_description = file: README.md
long_description_content_type = text/markdown
author = Riccardo Albiero
author_email = albr.riccardo@gmail.com
maintainer = Riccardo Albiero
maintainer_email = albr.riccardo@gmail.com
license_files = LICENSE
license = { text = "GPL-3.0-or-later" }
pltaform = unix, linux, cygwin, win32
project_urls =
    Bug Tracker = https://github.com/ricalbr/fastruments/issues
    Source Code = https://github.com/ricalbr/fastruments
    Release Notes = https://github.com/ricalbr/fastruments/releases

[options]
packages =
    fastruments
install_requires =
    matplotlib>=3.3.4
    nptyping>=2.4.1
    numpy>=1.24.4
	pillow>=12.0.0
	pyvisa>=1.1.16
	qontrol>=1.1.20
python_requires = >=3.8
include_package_data = true
zip_safe = true

[tool.setuptools.packages.find]
where = ["."]
include = ["fastruments*"]

[options.extras_require]
testing =
    black==22.10.0
    flake8>=3.9
    mypy>=0.910
    pre-commit>=2.1.0
    pytest>=6.0
    pytest-cov>=2.0
    tox>=3.24

[options.package_data]
femto = py.typed, utils/*

[flake8]
max-line-length = 120
ignore = E203, W503

[pep8]
max-line-length = 88
ignore = E101,E114,E115,E116,E121,E128,E251,E265,E266,E3,E711,E712,E713,E714,W191
